force-app/main/default/objects/Project_Component__c/Project_Component__c.object-meta.xml
<CustomObject>
    <label>Project Component</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Project Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>