force-app/main/default/objects/Project_Component__c/fields/Install_Type__c.field-meta.xml
<CustomField>
    <fullName>Install_Type__c</fullName>
    <label>Install Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>New Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>