force-app/main/default/objects/Project_Component__c/fields/Project_Component__c.field-meta.xml
<CustomField>
    <fullName>Project_Component__c</fullName>
    <label>Project Component</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activity Tracker</fullName>
            </value>
            <value>
                <fullName>Activity Tracker Pro</fullName>
            </value>
            <value>
                <fullName>Attorney Acknowledgments</fullName>
            </value>
            <value>
                <fullName>Contractor Walls</fullName>
            </value>
            <value>
                <fullName>Corporate &amp; Capital Markets</fullName>
            </value>
            <value>
                <fullName>Criteria Based Walls</fullName>
            </value>
            <value>
                <fullName>Custom IB Rules</fullName>
            </value>
            <value>
                <fullName>Custom Training</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>DTE Axiom Mobile</fullName>
            </value>
            <value>
                <fullName>Dynamic Groups and Cross Border</fullName>
            </value>
            <value>
                <fullName>eBH</fullName>
            </value>
            <value>
                <fullName>Foundational Walls</fullName>
            </value>
            <value>
                <fullName>iManage Plug-in</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Integration Builder</fullName>
            </value>
            <value>
                <fullName>Lawyer Portal</fullName>
            </value>
            <value>
                <fullName>Legal Holds</fullName>
            </value>
            <value>
                <fullName>Matter Centricity (Prosperoware Milan)</fullName>
            </value>
            <value>
                <fullName>Matter Team Manager</fullName>
            </value>
            <value>
                <fullName>Mobile capture – Android</fullName>
            </value>
            <value>
                <fullName>Mobile capture – BB legacy</fullName>
            </value>
            <value>
                <fullName>Mobile capture – iOS</fullName>
            </value>
            <value>
                <fullName>Mobile capture – Windows8</fullName>
            </value>
            <value>
                <fullName>Mobile entry – Android</fullName>
            </value>
            <value>
                <fullName>Mobile entry – BB10</fullName>
            </value>
            <value>
                <fullName>Mobile entry – BB legacy</fullName>
            </value>
            <value>
                <fullName>Mobile entry – iOS</fullName>
            </value>
            <value>
                <fullName>Mobile entry – Windows8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>